--- a/Bronze data ingestion Process1.ipynb
+++ b/Bronze data ingestion Process1.ipynb
@@ -106,7 +106,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Bronze data ingestion Process",
+   "notebookName": "Bronze data ingestion Process1",
    "widgets": {}
   },
   "language_info": {
