New renaming for the notebook name

--- a/Bronze data ingestion Process1_Updates.ipynb
+++ b/Bronze data ingestion Process1_Updates.ipynb
@@ -106,7 +106,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Bronze data ingestion Process1",
+   "notebookName": "Bronze data ingestion Process1_Updates",
    "widgets": {}
   },
   "language_info": {
