Update Bronze data ingestion Process1_Updates.ipynb

--- a/Bronze data ingestion Process1_Updates.ipynb
+++ b/Bronze data ingestion Process1_Updates.ipynb
@@ -67,7 +67,7 @@
      "nuid": "7aeed6af-126c-4bb2-8cc7-8765c73fa11e",
      "showTitle": false,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "ABC"
     }
    },
    "outputs": [],
