Update Bronze data ingestion Process1_Updates.ipynb

--- a/Bronze data ingestion Process1_Updates.ipynb
+++ b/Bronze data ingestion Process1_Updates.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "USE CATALOG bronze;\n",
+    "USE CATALOG bronze1;\n",
     "USE SCHEMA bronze_schema;\n",
     "\n",
     "CREATE EXTERNAL TABLE virat_kohli_data\n",
